--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,14 +6,12 @@
 
     <div class="footer-col-wrapper">
 
-<!--
 	<div class="footer-col  footer-col-1">
         <ul class="contact-list">
-         <li>{{ site.title }}</li>
+         <!-- <li>{{ site.title }}</li> -->
          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
       </div>
--->
 
       <div class="footer-col  footer-col-1">
         <ul class="social-media-list">
