--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,4 +1,4 @@
-Follow me:
+<a href="mailto:{{ site.data.theme.email }}">Email</a> or follow me:
 <div id="stalker">
   {% if site.data.theme.social.github %}
   <a title="{{ site.data.theme.social.github }} on Github" href="https://github.com/{{ site.data.theme.social.github }}">
