--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,6 @@
   {% endif %}
 
   <p>
-    © {{ site.data.theme.name }}, 2014 &mdash; built with <a href="http://jekyllrb.com/">Jekyll</a> using <a href="https://github.com/swanson/lagom">Lagom theme</a>
+	© <a href="mailto:{{ site.data.theme.email }}">{{ site.data.theme.name }}</a>, 2016 &mdash; built with <a href="http://jekyllrb.com/">Jekyll</a> using <a href="https://github.com/swanson/lagom">Lagom theme</a> (modified)
   </p>
 </div>
