Add custom 404 page, custom sidebar, and CNAME.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,8 +10,11 @@
 	-->
 	<h2><a href="/">Jon's Tech Blog</a></h2>
   <div id="bio">
+		<p><code>contents = </br>[code, data,</br>ml, curiosity]</code></p>
+		<!--
 		<p>Python, data, machine learning, and curiosity.</p>
-  </div>
+		-->
+	</div>
   <div id="social">
     {% include social.html %}
   </div>
