--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,6 +4,6 @@
 		<p><code>contents = </br>[code, data,</br>ml, curiosity]</code></p>
 	</div>
   <div id="social">
-    {% include social.html %}
+    {% include social-list.html %}
   </div>
 </nav>
