--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -3,5 +3,5 @@
 {% include css/base.css %}
 {% include css/skeleton.css %}
 {% include css/screen.css %}
-{% include css/layout.css %}
+{% include css/layout-alt.css %}
 {% include css/syntax.css %}
