--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <nav>
 	<h2><a href="/">Jon's Tech Blog</a></h2>
   <div id="bio">
-		<p><code>contents = </br>[code, data,</br>ml, curiosity]</code></p>
+		<p><code>contents = [code, data, ml, curiosity]</code></p>
 	</div>
   <div id="social">
     {% include social-list.html %}
