--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,17 @@ layout: default
 
 <h1 class="title">{{ page.title }}</h1>
 
+<div id="tags"> 
+	<ul>
+		{% for tag in page.tags %}
+			<li>
+				{{ tag }}
+			</li>
+		{% endfor %}
+	</ul>
+</div>
+
+
 <div id="post">
   {{ content }}
 </div>
