--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,13 @@
 <div class="disclaimer">
   {% if site.data.theme.show_disclaimer %}
-  <p>
-    The postings on this site are my own and don't necessarily represent my 
-    employer’s positions, strategies or opinions.
-  </p>
+	<p>
+		All views expressed on this site are my own and do not represent the
+		opinions of any entity whatsoever with which I have been, am now, or will be
+		affiliated.
+	</p>
   {% endif %}
 
   <p>
-	© <a href="mailto:{{ site.data.theme.email }}">{{ site.data.theme.name }}</a>, 2016 &mdash; built with <a href="http://jekyllrb.com/">Jekyll</a> using <a href="https://github.com/swanson/lagom">Lagom theme</a> (modified)
+	© <a href="mailto:{{ site.data.theme.email }}">{{ site.data.theme.name }}</a>, 2017 &mdash; built with <a href="http://jekyllrb.com/">Jekyll</a> using <a href="https://github.com/swanson/lagom">Lagom theme</a> (modified)
   </p>
 </div>
